--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
     "morgan": "^1.10.0",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^2.0.2",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "server": "node-env-run db.js --exec nodemon",
+    "dev": "run-p server start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy:": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
