--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "compression": "^1.7.4",
+    "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "server": "node-env-run db.js --exec nodemon",
-    "dev": "run-p server start",
+    "dev": "concurrently \" npm run server\" \"npm start\" ",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
